--- a/package.json
+++ b/package.json
@@ -8,7 +8,11 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-draggable": "^4.4.5",
+    "react-flow-renderer": "^10.3.17",
     "react-scripts": "5.0.1",
+    "react-xarrows": "^2.0.2",
+    "reactflow": "^11.5.6",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
